--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	 "uthor": "Yash Wardhan",
+	"author": "Yash Wardhan",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
